# zomint-logging

./: CMakeLists.txt  README.md
include/logging/: logging.h
src/test/: CMakeLists.txt  test.cc
